<resources>
    <string name="app_name">MyTrip</string>
    <string name="custo_da_viagem">Custo da viagem :</string>
    <string name="autonomia_do_carro">Autonomia do carro</string>
    <string name="autonomia">Autonomia</string>
    <string name="pre_o_do_litro">Preço do litro</string>
    <string name="preco">Preço</string>
    <string name="quilometros_a_serem_percorridos">Quilometros a serem percorridos</string>
    <string name="distancia">Distancia</string>
    <string name="calcular">Calcular</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="msg_erro_preenchimento">Valor incorreto !</string>
</resources>
